# Secure-Image-Neural-Network

./: .gitignore  CMakeLists.txt  README.md  tests.py
src/: Main.cpp
src/Encryption/: EncryptionAlgorithm.cpp
src/Math/: MathCal.cpp  Matrix.cpp
src/NeuralNetworks/: Data.cpp  ImRead.cpp  NeuralNetworks.cpp
src/includes/: Data.h  EncryptionAlgorithm.h  ImRead.h  MathCal.h  Matrix.h  NeuralNetworks.h  Tests.h
